<resources>
    <string name="app_name">Site Request App</string>

    <!--    login screen-->
    <string name="loginText">Please Login to continue</string>
    <string name="loginButton">LOGIN</string>
    <string name="emailPlaceholder">Username</string>
    <string name="pwdPlaceholder">Password</string>


    <!--    main home screen-->
    <string name="mainWelcome">Welcome. What do you want to do today?</string>
    <string name="selectSite">Select Site:</string>
    <string name="siteReqBtn">SITE REQUEST</string>
    <string name="DailyRptBtn">DAILY REPORT</string>
    <string name="SalaryInputBtn">SALARY INPUT</string>
    <string name="searchImage">Search Image</string>


    <!--  supply request screen  -->
    <string name="newRequest">New Site Request</string>
    <string name="addItemImage">Upload item image</string>
    <string name="itemInput">Product Name</string>
    <string name="qtyInput">Quantity E.g 2</string>
    <string name="units">Units E.g Cartons</string>
    <string name="dateRequired">Needed In</string>
    <string name="add">Add</string>
    <string name="days">Days</string>
    <string name="submitText">VIEW &amp; SUBMIT</string>
    <string name="siteRequestWelcome">Make a site supply request</string>
    <string name="selectItem">Select Item :</string>


    <!-- Daily Report form fields-->
    <string name="dailyRptWelcome">Submit your daily report</string>
    <string name="Temp">Temperature</string>
    <string name="siteVisitors">Visitors to the site</string>
    <string name="inspections">Tests / Inspections</string>
    <string name="accidents">Accidents, Injuries or Unusual Events</string>
    <string name="workProgress">Progress of Work</string>
    <string name="itemsAccomplished">Items Accomplished</string>
    <string name="meetings">Meetings and significant decisions</string>
    <string name="unresolvedIssues">Unresolved Issues</string>
    <string name="otherNotes">Other notes</string>
    <string name="preparedBy">Prepared By</string>
    <string name="conditions">CONDITIONS</string>
    <string name="weather">WEATHER</string>
    <string name="itemRq">Item</string>
    <string name="quantityRq">Qty</string>

    <!--  Resuested items header  -->
    <string name="unitsRq">Units</string>
    <string name="neededIn">Days</string>
    <string name="confirmBtn">Confirm Request</string>
    <string name="empid">Id No</string>

    <!--  Confirm Request  -->
    <string name="empName">Name</string>

    <!--  Salary Request -->
    <string name="empTel">Mobile No</string>
    <string name="empAmount">Amount</string>
    <string name="submit">Submit</string>
    <string name="fetch">Fetch</string>
    <string-array name="weather">
        <item>High Temperature</item>
        <item>Low Temperature</item>
    </string-array>
    <string-array name="conditions">
        <item>Partly Cloudy</item>
        <item>Cloudy</item>
        <item>Windy</item>
        <item>Rainy</item>
        <item>Snow</item>
        <item>Other</item>
    </string-array>

<!--    Search Image Activity -->
    <string name="requestId">Enter Request Id</string>
    <string name="search">Search</string>

</resources>
