<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SiteRequestActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/newRequestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newRequest"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/requestScroll"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siteRequestWelcome"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selectItem"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"/>


                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/itemsSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/itemInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:hint="@string/itemInput"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/qtyInput"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/qtyInput"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/unitsInput"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/units"
                android:inputType="none|text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/addItemImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addItemImage"
                android:onClick="addItemImage"/>

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/addItemsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:onClick="AddItems"
                android:text="@string/add"
                android:textSize="20sp" />

            <Button
                android:id="@+id/viewRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/submitText"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>